[gd_scene load_steps=81 format=3 uid="uid://dj4gk7ubgb6y3"]

[ext_resource type="Script" uid="uid://bnnt4bd3mk1cl" path="res://script/MainMenu.gd" id="1_o02vw"]
[ext_resource type="Texture2D" uid="uid://bghchlpicaayk" path="res://assets/background/Background1.jpeg" id="2_t1tdj"]
[ext_resource type="Texture2D" uid="uid://ccxc76q1wxpqg" path="res://assets/images/StartMenuBG/ezgif-frame-001.jpg" id="3_55pwl"]
[ext_resource type="Texture2D" uid="uid://duu35w2nctlsr" path="res://assets/images/StartMenuBG/ezgif-frame-002.jpg" id="4_os6mx"]
[ext_resource type="Texture2D" uid="uid://dddeah75myonk" path="res://assets/images/StartMenuBG/ezgif-frame-003.jpg" id="5_xr12h"]
[ext_resource type="Texture2D" uid="uid://dvdeck6swy53v" path="res://assets/images/StartMenuBG/ezgif-frame-004.jpg" id="6_4arpi"]
[ext_resource type="Texture2D" uid="uid://1c1t8vltkvud" path="res://assets/images/StartMenuBG/ezgif-frame-005.jpg" id="7_qyw6g"]
[ext_resource type="Texture2D" uid="uid://dpkngoef27jv1" path="res://assets/images/StartMenuBG/ezgif-frame-006.jpg" id="8_vap0c"]
[ext_resource type="Texture2D" uid="uid://cj0kcgxi4rjeo" path="res://assets/images/StartMenuBG/ezgif-frame-007.jpg" id="9_ifgdd"]
[ext_resource type="Texture2D" uid="uid://bcw3m54x75b4e" path="res://assets/images/StartMenuBG/ezgif-frame-008.jpg" id="10_5df5d"]
[ext_resource type="Texture2D" uid="uid://chltclrr2y6h5" path="res://assets/images/StartMenuBG/ezgif-frame-009.jpg" id="11_lu7ol"]
[ext_resource type="Texture2D" uid="uid://bqhv3hxlyqbcp" path="res://assets/images/StartMenuBG/ezgif-frame-010.jpg" id="12_h5nfs"]
[ext_resource type="Texture2D" uid="uid://bq0a7ws65vhmy" path="res://assets/images/StartMenuBG/ezgif-frame-011.jpg" id="13_rs1tw"]
[ext_resource type="Texture2D" uid="uid://cmgvqoilgulv2" path="res://assets/images/StartMenuBG/ezgif-frame-012.jpg" id="14_vnjh5"]
[ext_resource type="Texture2D" uid="uid://deeaa5g0t0pj8" path="res://assets/images/StartMenuBG/ezgif-frame-013.jpg" id="15_plr66"]
[ext_resource type="Texture2D" uid="uid://cjssa73ec7v3c" path="res://assets/images/StartMenuBG/ezgif-frame-014.jpg" id="16_wemu0"]
[ext_resource type="Texture2D" uid="uid://bleabh3wyp07e" path="res://assets/images/StartMenuBG/ezgif-frame-015.jpg" id="17_6ey73"]
[ext_resource type="Texture2D" uid="uid://ddfjbhtotjxfc" path="res://assets/images/StartMenuBG/ezgif-frame-016.jpg" id="18_kg5m4"]
[ext_resource type="Texture2D" uid="uid://cptgmrk4xgxxv" path="res://assets/images/StartMenuBG/ezgif-frame-017.jpg" id="19_h46ox"]
[ext_resource type="Texture2D" uid="uid://coskn2gw7tnvl" path="res://assets/images/StartMenuBG/ezgif-frame-018.jpg" id="20_fg5es"]
[ext_resource type="Texture2D" uid="uid://b1dt1ckhdlpwx" path="res://assets/images/StartMenuBG/ezgif-frame-019.jpg" id="21_0bj77"]
[ext_resource type="Texture2D" uid="uid://ddqtjvr2pq6kn" path="res://assets/images/StartMenuBG/ezgif-frame-020.jpg" id="22_urw4b"]
[ext_resource type="Texture2D" uid="uid://boimel5yx5f6u" path="res://assets/images/StartMenuBG/ezgif-frame-021.jpg" id="23_krepi"]
[ext_resource type="Texture2D" uid="uid://dq0ga00f7w0pw" path="res://assets/images/StartMenuBG/ezgif-frame-022.jpg" id="24_cdhnp"]
[ext_resource type="Texture2D" uid="uid://bv2wt30cufr18" path="res://assets/images/StartMenuBG/ezgif-frame-023.jpg" id="25_c1pbn"]
[ext_resource type="Texture2D" uid="uid://bkq075h60kiqo" path="res://assets/images/StartMenuBG/ezgif-frame-024.jpg" id="26_76cbo"]
[ext_resource type="Texture2D" uid="uid://sscguxs33p1o" path="res://assets/images/StartMenuBG/ezgif-frame-025.jpg" id="27_ug4rp"]
[ext_resource type="Texture2D" uid="uid://dwjfhxpsl1t0x" path="res://assets/images/StartMenuBG/ezgif-frame-026.jpg" id="28_05irx"]
[ext_resource type="Texture2D" uid="uid://cs2kh705p7aml" path="res://assets/images/StartMenuBG/ezgif-frame-027.jpg" id="29_yhvx4"]
[ext_resource type="Texture2D" uid="uid://dbkc26qlkq7lk" path="res://assets/images/StartMenuBG/ezgif-frame-028.jpg" id="30_yaks2"]
[ext_resource type="Texture2D" uid="uid://4hlweganm4p" path="res://assets/images/StartMenuBG/ezgif-frame-029.jpg" id="31_ahmr1"]
[ext_resource type="Texture2D" uid="uid://cu8l8prmtukro" path="res://assets/images/StartMenuBG/ezgif-frame-030.jpg" id="32_j3edg"]
[ext_resource type="Texture2D" uid="uid://dhxhjtesjx7u7" path="res://assets/images/StartMenuBG/ezgif-frame-031.jpg" id="33_me65s"]
[ext_resource type="Texture2D" uid="uid://dfffydg80f11" path="res://assets/images/StartMenuBG/ezgif-frame-032.jpg" id="34_2rswe"]
[ext_resource type="Texture2D" uid="uid://djkkavlqtdb48" path="res://assets/images/StartMenuBG/ezgif-frame-033.jpg" id="35_4nyey"]
[ext_resource type="Texture2D" uid="uid://bgdkxwenprhnq" path="res://assets/images/StartMenuBG/ezgif-frame-034.jpg" id="36_hduga"]
[ext_resource type="Texture2D" uid="uid://dky0si74s7j8q" path="res://assets/images/StartMenuBG/ezgif-frame-035.jpg" id="37_wkli8"]
[ext_resource type="Texture2D" uid="uid://djkbxy6byuqsx" path="res://assets/images/StartMenuBG/ezgif-frame-036.jpg" id="38_r2gxt"]
[ext_resource type="Texture2D" uid="uid://ckkhilvelgfr3" path="res://assets/images/StartMenuBG/ezgif-frame-037.jpg" id="39_d21u6"]
[ext_resource type="Texture2D" uid="uid://rdqr26072qdi" path="res://assets/images/StartMenuBG/ezgif-frame-038.jpg" id="40_y123l"]
[ext_resource type="Texture2D" uid="uid://bvsphkjdbt2bf" path="res://assets/images/StartMenuBG/ezgif-frame-039.jpg" id="41_sj6qd"]
[ext_resource type="Texture2D" uid="uid://lkfhyxh4k46h" path="res://assets/images/StartMenuBG/ezgif-frame-040.jpg" id="42_inxps"]
[ext_resource type="Texture2D" uid="uid://dposqf2nlt6k4" path="res://assets/images/StartMenuBG/ezgif-frame-041.jpg" id="43_3ee3j"]
[ext_resource type="Texture2D" uid="uid://rqm53ogji6sm" path="res://assets/images/StartMenuBG/ezgif-frame-042.jpg" id="44_x8cud"]
[ext_resource type="Texture2D" uid="uid://cde0hh622y24a" path="res://assets/images/StartMenuBG/ezgif-frame-043.jpg" id="45_sq6qu"]
[ext_resource type="Texture2D" uid="uid://gj6ufkj00iik" path="res://assets/images/StartMenuBG/ezgif-frame-044.jpg" id="46_nlebd"]
[ext_resource type="Texture2D" uid="uid://bulrei06m7ubb" path="res://assets/images/StartMenuBG/ezgif-frame-045.jpg" id="47_cndac"]
[ext_resource type="Texture2D" uid="uid://phjmg1wu6v0i" path="res://assets/images/StartMenuBG/ezgif-frame-046.jpg" id="48_3nmnh"]
[ext_resource type="Texture2D" uid="uid://1q1ts8j624mw" path="res://assets/images/StartMenuBG/ezgif-frame-047.jpg" id="49_f2pd7"]
[ext_resource type="Texture2D" uid="uid://df2ifl4lwk6c5" path="res://assets/images/StartMenuBG/ezgif-frame-048.jpg" id="50_cnm5x"]
[ext_resource type="Texture2D" uid="uid://cleullsa2y6d3" path="res://assets/images/StartMenuBG/ezgif-frame-049.jpg" id="51_afsl4"]
[ext_resource type="Texture2D" uid="uid://bruq5io4sf3qv" path="res://assets/images/StartMenuBG/ezgif-frame-050.jpg" id="52_nh1iq"]
[ext_resource type="Texture2D" uid="uid://dt0e0dpgi702d" path="res://assets/images/StartMenuBG/ezgif-frame-051.jpg" id="53_rnvxr"]
[ext_resource type="Texture2D" uid="uid://chqygyljuwvei" path="res://assets/images/StartMenuBG/ezgif-frame-052.jpg" id="54_nrspn"]
[ext_resource type="Texture2D" uid="uid://dyosuwufe5wqt" path="res://assets/images/StartMenuBG/ezgif-frame-053.jpg" id="55_7bgpe"]
[ext_resource type="Texture2D" uid="uid://b1p5y25vccatt" path="res://assets/images/StartMenuBG/ezgif-frame-054.jpg" id="56_w04xj"]
[ext_resource type="Texture2D" uid="uid://dsevqng83d6iy" path="res://assets/images/StartMenuBG/ezgif-frame-055.jpg" id="57_bqy1c"]
[ext_resource type="Texture2D" uid="uid://cxipvti3w5oo6" path="res://assets/images/StartMenuBG/ezgif-frame-056.jpg" id="58_7j7dr"]
[ext_resource type="Texture2D" uid="uid://cho22qneimgoe" path="res://assets/images/StartMenuBG/ezgif-frame-057.jpg" id="59_0ri2t"]
[ext_resource type="Texture2D" uid="uid://c8looc48vgaqy" path="res://assets/images/StartMenuBG/ezgif-frame-058.jpg" id="60_igc6d"]
[ext_resource type="Texture2D" uid="uid://d05to3jfdno4d" path="res://assets/images/StartMenuBG/ezgif-frame-059.jpg" id="61_ro226"]
[ext_resource type="Texture2D" uid="uid://ktxt5ssrjv2g" path="res://assets/images/StartMenuBG/ezgif-frame-060.jpg" id="62_kbbdc"]
[ext_resource type="Texture2D" uid="uid://di2d3quko8hj" path="res://assets/images/StartMenuBG/ezgif-frame-061.jpg" id="63_m5h5a"]
[ext_resource type="Texture2D" uid="uid://37jxvhpy4ocm" path="res://assets/images/StartMenuBG/ezgif-frame-062.jpg" id="64_q1yqb"]
[ext_resource type="Texture2D" uid="uid://pusj43ymapy0" path="res://assets/images/StartMenuBG/ezgif-frame-063.jpg" id="65_t7cx2"]
[ext_resource type="Texture2D" uid="uid://cv4cdpq7n15oy" path="res://assets/images/StartMenuBG/ezgif-frame-064.jpg" id="66_ao8a5"]
[ext_resource type="Texture2D" uid="uid://8r8v7tv10xa" path="res://assets/images/StartMenuBG/ezgif-frame-065.jpg" id="67_mdc8j"]
[ext_resource type="Texture2D" uid="uid://b3dhqsslga26l" path="res://assets/images/StartMenuBG/ezgif-frame-066.jpg" id="68_ibrfj"]
[ext_resource type="Texture2D" uid="uid://dklppv2spfnhy" path="res://assets/images/StartMenuBG/ezgif-frame-067.jpg" id="69_wj5fs"]
[ext_resource type="Texture2D" uid="uid://bs2fui1qhlov7" path="res://assets/images/StartMenuBG/ezgif-frame-068.jpg" id="70_qt44v"]
[ext_resource type="Texture2D" uid="uid://r8grt7a2axj8" path="res://assets/images/StartMenuBG/ezgif-frame-069.jpg" id="71_tg31e"]
[ext_resource type="Texture2D" uid="uid://0siy0dxs56kv" path="res://assets/images/StartMenuBG/ezgif-frame-070.jpg" id="72_sy80w"]
[ext_resource type="Texture2D" uid="uid://bqvjehwvye8tw" path="res://assets/images/StartMenuBG/ezgif-frame-071.jpg" id="73_ild1x"]
[ext_resource type="Texture2D" uid="uid://cbcy8wh0gf2xm" path="res://assets/images/StartMenuBG/ezgif-frame-072.jpg" id="74_nsha8"]
[ext_resource type="Texture2D" uid="uid://djaf0278lng5m" path="res://assets/images/StartMenuBG/ezgif-frame-073.jpg" id="75_rvuwv"]
[ext_resource type="Texture2D" uid="uid://cexlmkded2isx" path="res://assets/images/StartMenuBG/ezgif-frame-074.jpg" id="76_ns8is"]
[ext_resource type="Texture2D" uid="uid://bamqdtpnvrd3r" path="res://assets/images/StartMenuBG/ezgif-frame-075.jpg" id="77_bs80u"]
[ext_resource type="Texture2D" uid="uid://cntehbydbbeyc" path="res://assets/images/sponsored2 cropped.jpeg" id="78_r75kf"]
[ext_resource type="PackedScene" path="res://scenes/ui/Fade_Transition.tscn" id="79_0eqeq"]

[sub_resource type="SpriteFrames" id="SpriteFrames_iwbf0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_55pwl")
}, {
"duration": 1.0,
"texture": ExtResource("4_os6mx")
}, {
"duration": 1.0,
"texture": ExtResource("5_xr12h")
}, {
"duration": 1.0,
"texture": ExtResource("6_4arpi")
}, {
"duration": 1.0,
"texture": ExtResource("7_qyw6g")
}, {
"duration": 1.0,
"texture": ExtResource("8_vap0c")
}, {
"duration": 1.0,
"texture": ExtResource("9_ifgdd")
}, {
"duration": 1.0,
"texture": ExtResource("10_5df5d")
}, {
"duration": 1.0,
"texture": ExtResource("11_lu7ol")
}, {
"duration": 1.0,
"texture": ExtResource("12_h5nfs")
}, {
"duration": 1.0,
"texture": ExtResource("13_rs1tw")
}, {
"duration": 1.0,
"texture": ExtResource("14_vnjh5")
}, {
"duration": 1.0,
"texture": ExtResource("15_plr66")
}, {
"duration": 1.0,
"texture": ExtResource("16_wemu0")
}, {
"duration": 1.0,
"texture": ExtResource("17_6ey73")
}, {
"duration": 1.0,
"texture": ExtResource("18_kg5m4")
}, {
"duration": 1.0,
"texture": ExtResource("19_h46ox")
}, {
"duration": 1.0,
"texture": ExtResource("20_fg5es")
}, {
"duration": 1.0,
"texture": ExtResource("21_0bj77")
}, {
"duration": 1.0,
"texture": ExtResource("22_urw4b")
}, {
"duration": 1.0,
"texture": ExtResource("23_krepi")
}, {
"duration": 1.0,
"texture": ExtResource("24_cdhnp")
}, {
"duration": 1.0,
"texture": ExtResource("25_c1pbn")
}, {
"duration": 1.0,
"texture": ExtResource("26_76cbo")
}, {
"duration": 1.0,
"texture": ExtResource("27_ug4rp")
}, {
"duration": 1.0,
"texture": ExtResource("28_05irx")
}, {
"duration": 1.0,
"texture": ExtResource("29_yhvx4")
}, {
"duration": 1.0,
"texture": ExtResource("30_yaks2")
}, {
"duration": 1.0,
"texture": ExtResource("31_ahmr1")
}, {
"duration": 1.0,
"texture": ExtResource("32_j3edg")
}, {
"duration": 1.0,
"texture": ExtResource("33_me65s")
}, {
"duration": 1.0,
"texture": ExtResource("34_2rswe")
}, {
"duration": 1.0,
"texture": ExtResource("35_4nyey")
}, {
"duration": 1.0,
"texture": ExtResource("36_hduga")
}, {
"duration": 1.0,
"texture": ExtResource("37_wkli8")
}, {
"duration": 1.0,
"texture": ExtResource("38_r2gxt")
}, {
"duration": 1.0,
"texture": ExtResource("39_d21u6")
}, {
"duration": 1.0,
"texture": ExtResource("40_y123l")
}, {
"duration": 1.0,
"texture": ExtResource("41_sj6qd")
}, {
"duration": 1.0,
"texture": ExtResource("42_inxps")
}, {
"duration": 1.0,
"texture": ExtResource("43_3ee3j")
}, {
"duration": 1.0,
"texture": ExtResource("44_x8cud")
}, {
"duration": 1.0,
"texture": ExtResource("45_sq6qu")
}, {
"duration": 1.0,
"texture": ExtResource("46_nlebd")
}, {
"duration": 1.0,
"texture": ExtResource("47_cndac")
}, {
"duration": 1.0,
"texture": ExtResource("48_3nmnh")
}, {
"duration": 1.0,
"texture": ExtResource("49_f2pd7")
}, {
"duration": 1.0,
"texture": ExtResource("50_cnm5x")
}, {
"duration": 1.0,
"texture": ExtResource("51_afsl4")
}, {
"duration": 1.0,
"texture": ExtResource("52_nh1iq")
}, {
"duration": 1.0,
"texture": ExtResource("53_rnvxr")
}, {
"duration": 1.0,
"texture": ExtResource("54_nrspn")
}, {
"duration": 1.0,
"texture": ExtResource("55_7bgpe")
}, {
"duration": 1.0,
"texture": ExtResource("56_w04xj")
}, {
"duration": 1.0,
"texture": ExtResource("57_bqy1c")
}, {
"duration": 1.0,
"texture": ExtResource("58_7j7dr")
}, {
"duration": 1.0,
"texture": ExtResource("59_0ri2t")
}, {
"duration": 1.0,
"texture": ExtResource("60_igc6d")
}, {
"duration": 1.0,
"texture": ExtResource("61_ro226")
}, {
"duration": 1.0,
"texture": ExtResource("62_kbbdc")
}, {
"duration": 1.0,
"texture": ExtResource("63_m5h5a")
}, {
"duration": 1.0,
"texture": ExtResource("64_q1yqb")
}, {
"duration": 1.0,
"texture": ExtResource("65_t7cx2")
}, {
"duration": 1.0,
"texture": ExtResource("66_ao8a5")
}, {
"duration": 1.0,
"texture": ExtResource("67_mdc8j")
}, {
"duration": 1.0,
"texture": ExtResource("68_ibrfj")
}, {
"duration": 1.0,
"texture": ExtResource("69_wj5fs")
}, {
"duration": 1.0,
"texture": ExtResource("70_qt44v")
}, {
"duration": 1.0,
"texture": ExtResource("71_tg31e")
}, {
"duration": 1.0,
"texture": ExtResource("72_sy80w")
}, {
"duration": 1.0,
"texture": ExtResource("73_ild1x")
}, {
"duration": 1.0,
"texture": ExtResource("74_nsha8")
}, {
"duration": 1.0,
"texture": ExtResource("75_rvuwv")
}, {
"duration": 1.0,
"texture": ExtResource("76_ns8is")
}, {
"duration": 1.0,
"texture": ExtResource("77_bs80u")
}],
"loop": true,
"name": &"default",
"speed": 25.0
}]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_o02vw")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_t1tdj")
expand_mode = 1

[node name="StartMenu" type="AnimatedSprite2D" parent="."]
position = Vector2(649, 365.00003)
scale = Vector2(0.6765555, 0.6765555)
sprite_frames = SubResource("SpriteFrames_iwbf0")
frame_progress = 0.81171423

[node name="Start" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 97.0
offset_top = -14.5
offset_right = 302.0
offset_bottom = 33.5
grow_vertical = 2
theme_override_font_sizes/font_size = 29
text = "Start"

[node name="Options" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 97.0
offset_top = 49.0
offset_right = 303.0
offset_bottom = 97.0
grow_vertical = 2
theme_override_font_sizes/font_size = 29
text = "Options"

[node name="Quit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 97.0
offset_top = 112.0
offset_right = 303.0
offset_bottom = 160.0
grow_vertical = 2
theme_override_font_sizes/font_size = 29
text = "Quit"

[node name="Credit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 1025.0
offset_top = 257.0
offset_right = 1108.0
offset_bottom = 297.0
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Credit"

[node name="SponsorButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 926.0
offset_top = 257.0
offset_right = 1013.0
offset_bottom = 297.0
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Sponsor"

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SponsoredImage" type="TextureRect" parent="Overlay"]
layout_mode = 0
offset_left = 485.0
offset_top = 151.0
offset_right = 1082.0
offset_bottom = 458.0
texture = ExtResource("78_r75kf")
expand_mode = 1
stretch_mode = 5

[node name="BackButton" type="Button" parent="Overlay/SponsoredImage"]
layout_mode = 0
offset_left = 354.0
offset_top = 431.0
offset_right = 427.0
offset_bottom = 471.0
theme_override_font_sizes/font_size = 20
text = "Back"

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 43.0
offset_top = 160.0
offset_right = 356.0
offset_bottom = 258.0
color = Color(0, 0, 0, 0.5647059)

[node name="Fade_Transition" parent="." instance=ExtResource("79_0eqeq")]
visible = false
layout_mode = 1

[node name="fade_timer" type="Timer" parent="Fade_Transition"]

[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Credit" to="." method="_on_credit_pressed"]
[connection signal="pressed" from="SponsorButton" to="." method="_on_sponsor_button_pressed"]
[connection signal="pressed" from="Overlay/SponsoredImage/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="timeout" from="Fade_Transition/fade_timer" to="." method="_on_fade_timer_timeout"]
